<resources>
    <string name="app_name">Taller 3 Bllacoz</string>
    <string name="emailUsuario">Email</string>
    <string name="ingreseEmailUsuario">Ingrese su email</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingreseContrasena">Ingrese su contrasena</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre">Nombre</string>
    <string name="ingresarNombre">Ingrese su nombre</string>
    <string name="apellido">Apellido</string>
    <string name="ingrese_su_apellido">Ingrese su apellido</string>
    <string name="email">Email</string>
    <string name="ingrese_su_email">Ingrese su email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="nIdentificacion">Número de identificación</string>
    <string name="regresar">Regresar</string>
    <string name="ingresarIdentificacion">Ingrese su número de identificación</string>
    <string name="foto">Foto Usuario</string>
    <string name="ubicacion">Ubicación</string>
    <string name="foto_de_perfil">Foto de Perfil</string>
    <string name="subirFoto">Subir Foto del Dispositivo</string>
    <string name="tomarFotoCamara">Tomar con la Cámara</string>
    <string name="perfil">Perfil de Usuario</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
</resources>