<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="35dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <ImageView-->
<!--        android:id="@+id/Logo"-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="150dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:src="@drawable/logo_capybara">-->
<!--    </ImageView>-->

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/pfp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_capybara" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black">
    </TextView>
    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingresarNombre">
    </EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apellido"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black">
    </TextView>
    <EditText
        android:id="@+id/apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_su_apellido">
    </EditText>
<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/nombre_de_usuario"-->
<!--        android:textSize="18sp"-->
<!--        android:textStyle="bold"-->
<!--        android:textColor="@color/black">-->
<!--    </TextView>-->
<!--    <EditText-->
<!--        android:id="@+id/username"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/ingrese_su_nombre_de_usuario">-->
<!--    </EditText>-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black">
    </TextView>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_su_email">
    </EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contrase_a"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black">
    </TextView>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_su_contrase_a">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nIdentificacion"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black">
    </TextView>
    <EditText
        android:id="@+id/numeroIdentificacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingresarIdentificacion">
    </EditText>

    <LinearLayout

        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button_with_border"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.4"
            android:padding="5dp"
            android:text="@string/foto"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/tomarFoto"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:background="@drawable/rounded_button_with_border"
            android:padding="5dp"
            android:src="@drawable/camara">

        </ImageView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.4"
            android:padding="5dp"
            android:text="@string/ubicacion"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/obtenerUbi"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:background="@drawable/rounded_button_with_border"
            android:padding="5dp"
            android:src="@drawable/location">

        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <Button
            android:id="@+id/registrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/registrarse"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textAllCaps="false">
        </Button>

        <LinearLayout
            android:id="@+id/regresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button_with_border">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.3"
                android:padding="5dp"
                android:layout_gravity="center"
                android:src="@drawable/backarrow">
            </ImageView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:padding="5dp"
                android:text="@string/regresar"
                android:textColor="@color/black"
                android:textStyle="bold"></TextView>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>