<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ImageView
        android:id="@+id/Logo"
        android:layout_width="249dp"
        android:layout_height="239dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="80dp"
        android:src="@drawable/logo_capybara">

    </ImageView>

    <LinearLayout
        android:id="@+id/contenedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Logo"
        android:layout_margin="32dp"
        android:layout_marginTop="83dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_background"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/emailUsuario"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black">

        </TextView>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="10dp"
            android:hint="@string/ingreseEmailUsuario"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/contrasena"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black">


        </TextView>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="10dp"
            android:hint="@string/ingreseContrasena"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/iniciarSesion"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAllCaps="false">
        </Button>
    </LinearLayout>

    <Button
        android:id="@+id/registrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contenedor"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="120dp"
        android:background="@drawable/rounded_button_with_border"
        android:text="@string/registrarse"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textAllCaps="false">

    </Button>


</RelativeLayout>
