<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/foto_de_perfil"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center">
    </TextView>

    <LinearLayout
        android:id="@+id/cambiPfp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titulo"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/pfp"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_capybara" />

        <Button
            android:id="@+id/subirFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:text="@string/subirFoto"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textAllCaps="false">
        </Button>
        <Button
            android:id="@+id/tomarFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:text="@string/tomarFotoCamara"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textAllCaps="false">
        </Button>
        <LinearLayout
            android:id="@+id/regresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button_with_border">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.3"
                android:padding="5dp"
                android:layout_gravity="center"
                android:src="@drawable/backarrow">
            </ImageView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/regresar"
                android:textStyle="bold"
                android:textColor="@color/black">
            </TextView>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>